<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <!-- Application identifiers -->
    <string name="app_name">Locator</string>
    <string name="app_tag">Locator</string>
    <string name="app_description">Displays current location and updated location using Location Services</string>

    <!-- User interface labels and strings -->

    <string name="edit_message">Type location name</string>

    <!-- Address format -->
    <string name="address_output_string">%1$s, %2$s, %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="lat_long">%1$.6f</string>
    <string name="altitude_format">%1$.0f</string>
    <string name="Speed_Format">%1$.0f</string>

    <!-- Menu title -->
    <string name="action_settings">Settings</string>

    <!-- Labels -->
    <string name="latlng">Lat/Long:</string>
    <string name="address">Address:</string>
    <string name="speed">Speed:</string>
    <string name="unit">Kmh</string>

    <!-- Messages -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">        Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">        Location update error. code %1$d message %2$s</string>
    <string name="location_update_missing_update">        Location update error. No incoming location.</string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">        Can\'t request location updates, previous request hasn\'t finished</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="try_again">Please try again</string>

    <!-- Menu strings -->
    <string name="get_location">Get Location</string>
    <string name="get_address">Get Address</string>
    <string name="start_updates">Periodic updates</string>
    <string name="stop_updates">No updates</string>
    <string name="updates">Location Updates</string>
    <string name="settings_title">Settings</string>
    <string name="search_title">Search</string>
    <string name="exit">Exit</string>
    
    <!-- The label for use as a searchable item -->
    <string name="search_label">Location</string>

    <!-- The hint text that appears in the search box. -->
    <string name="search_hint">Search the locations</string>
    
    <!-- The description that will show up in the search settings for this source.  -->
    <string name="settings_description">My Locations</string>
    
    <string name="title_activity_set_preference">Settings</string>
    <string name="menu_search">Search Location DB</string>
    <string name="title_activity_search">SearchActivity</string>


</resources>
