<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/get_location"
          android:title="@string/get_location"
          android:icon="@drawable/action_marker"
          android:showAsAction="always"/>
    
    <!-- Search Widget -->
	<item android:id="@+id/action_search"
	      android:icon="@drawable/ic_action_search"
	      android:title="@string/menu_search"
	      android:showAsAction="collapseActionView|always"
	      android:actionViewClass="android.widget.SearchView"/>   
    
     <item android:id="@+id/settings"
          android:title="@string/settings_title"
          android:icon="@drawable/setting"
          android:showAsAction="always"
          android:orderInCategory="4"/>
      
        <item android:id="@+id/exit"
          android:title="@string/exit"
          android:showAsAction="never"
          android:orderInCategory="5"/>
</menu>